1928 es and pt translations 4 orcid (#93)
* added orcid messages to spanish file
* pt translations for orcid

Co-authored-by: Sandra Mierz <sandra.mierz@tib.eu>

Resolves: https://jira.lyrasis.org/browse/VIVO-1928

--- a/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
+++ b/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
@@ -816,133 +816,133 @@ editor_of_entry = editor de entrada para
 #
 #New Entries for i18n purposes
 #
-edit_entry_for_head_role=: Edit this "head of" role
-edit_entry_for_member_role=: Edit this membership
-edit_entry_for_clinical_role=: Edit this clinical activity
-edit_entry_for_attendee_role=: Edit this participation
-edit_entry_for_organizer_role=: Edit this organizer role
-edit_entry_for_editor_role=: Edit this editor role
-edit_entry_for_service_provider_role=: Edit this service provider role
-edit_entry_for_outreach_provider_role=: Edit this outreach provider role
-edit_entry_for_researcher_role=: Edit this researcher role
-edit_entry_for_reviewer_role=: Edit this reviewer role
-edit_entry_for_teacher_role=: Edit this teaching role
+edit_entry_for_head_role=: Edite este rol "jefe de"
+edit_entry_for_member_role=: Edite esta membresía
+edit_entry_for_clinical_role=: Edite esta actividad clínica
+edit_entry_for_attendee_role=: Edite esta participación
+edit_entry_for_organizer_role=: Edite este rol de organizador
+edit_entry_for_editor_role=: Edite este rol de editor
+edit_entry_for_service_provider_role=: Edite este rol de proveedor de servicios
+edit_entry_for_outreach_provider_role=: Edite este rol de proveedor de difusión
+edit_entry_for_researcher_role=: Edite este rol de investigador
+edit_entry_for_reviewer_role=: Edite este rol de revisor
+edit_entry_for_teacher_role=: Edite este rol de enseñanza
 
-create_entry_for_head_role=: Add a new "head of" role
-create_entry_for_member_role=: Add a new membership
-create_entry_for_clinical_role=: Add a new clinical activity
-create_entry_for_attendee_role=: Add a new participation
-create_entry_for_organizer_role=: Add a new Organizer role
-create_entry_for_editor_role=: Add a new editor role
-create_entry_for_service_provider_role=: Add a new service provider role
-create_entry_for_outreach_provider_role=: Add a new outreach provider role
-create_entry_for_researcher_role=: Add a new researcher role
-create_entry_for_reviewer_role=: Add a new reviewer role
-create_entry_for_teacher_role=: Add a new teaching role
+create_entry_for_head_role=: Agregue un rol nuevo de "jefe de"
+create_entry_for_member_role=: Agregue una membresía nueva
+create_entry_for_clinical_role=: Agregue una actividad clínica nueva
+create_entry_for_attendee_role=: Agregue una participación nueva
+create_entry_for_organizer_role=: Agregue un rol nuevo de organizador
+create_entry_for_editor_role=: Agregue un rol nuevo de editor
+create_entry_for_service_provider_role=: Agregue un rol nuevo de proveedor de servicios
+create_entry_for_outreach_provider_role=: Agregue un rol nuevo de proveedor de difusión
+create_entry_for_researcher_role=: Agregue un rol nuevo de investigador
+create_entry_for_reviewer_role=: Agregue un rol nuevo de revisor
+create_entry_for_teacher_role=: Agregue un rol nuevo de enseñanza
 
-save_changes=Save
-start_capitalized = Start
-end_capitalized = End
-institution_name=Name of Institution
-role_in_institution=Role in Institution
-presentation_name_capitalized=Title of Presentation
-role_in_presentation_capitalized=Role in Presentation
-advisee_capitalized_first_name=First Name
-advisee_capitalized_lastname=Last Name
+save_changes=Guardar
+start_capitalized = Inicio
+end_capitalized = Fin
+institution_name=Nombre de la institución
+role_in_institution=Rol en la institución
+presentation_name_capitalized=Título de la presentación
+role_in_presentation_capitalized=Rol en la presentación
+advisee_capitalized_first_name=Nombre
+advisee_capitalized_lastname=Apellido
 
-add_orcid_id=Add an iD
+add_orcid_id=Agregar un ID
 
-orcid_title_add = Do you want to add an ORCID iD?
-orcid_step1_add = Step 1: Adding your ORCID iD
-orcid_title_confirm = Do you want to add an ORCID iD?
-orcid_step1_confirm = Step 1: Adding your ORCID iD
+orcid_title_add = ¿Desea añadir su ORCID iD?
+orcid_step1_add = Paso 1: Agregar su ORCID iD
+orcid_title_confirm = ¿Desea añadir su ORCID iD?
+orcid_step1_confirm = Paso 1: Agregar su ORCID iD
 
-orcid_step1_description = <ul><li>VIVO redirects you to ORCID's web site.</li> \
-<li>You log in to your ORCID account. <ul class="inner"><li>If you don't have an account, you can create one.</li></ul></li> \
-<li>You tell ORCID that VIVO may read your ORCID record.</li> \
-<li>VIVO reads your ORCID record.</li> \
-<li>VIVO notes that your ORCID iD is confirmed.</li></ul>
+orcid_step1_description = <ul><li>VIVO le redirigirá a la pagina web de ORCID.</li> \
+<li>Inicie sesión con su cuenta ORCID. <ul class="inner"><li>Si no tiene una cuenta de ORCID, puede crearla.</li></ul></li> \
+<li>Autorizar a ORCID que VIVO puede leer su registro ORCID.</li> \
+<li>VIVO lee su registro ORCID.</li> \
+<li>VIVO nota que su ORCID iD está confirmado.</li></ul>
 
-orcid_step1_denied = <p>You denied VIVO's request to read your ORCID record.</p> \
-<p>Confirmation can't continue.</p>
+orcid_step1_denied = <p>Ha denegado la solicitud de VIVO de leer su registro ORCID.</p> \
+<p>La confirmación no puede continuar.</p>
 
-orcid_step1_failed = <p>VIVO failed to read your ORCID record.</p> \
-<p>Confirmation can't continue.</p>
+orcid_step1_failed = <p>Falla para leer su registro ORCID.</p> \
+<p>La confirmación no puede continuar.</p>
 
-orcid_step1_confirmed = <p>Your ORCID iD is confirmed as {0}</p>
+orcid_step1_confirmed = <p>Su ORCID iD se confirmó como {0}</p>
 
-orcid_step2_heading = Step 2 (recommended): Linking your ORCID record to VIVO
+orcid_step2_heading = Paso 2 (recomendado): Conecte su registro ORCID a VIVO
 
-orcid_step2_description = <ul><li>VIVO redirects you to ORCID's web site</li> \
-<li>You tell ORCID that VIVO may add an "external ID" to your ORCID record.</li> \
-<li>VIVO adds the external ID.</li></ul>
+orcid_step2_description = <ul><li>VIVO le redirigirá a la pagina web de ORCID</li> \
+<li>Autorice a ORCID que VIVO permita añadir su ID externo a su registro ORCID.</li> \
+<li>VIVO añade el ID externo.</li></ul>
 
-orcid_step2_already_present = <p>Your ORCID record already includes a link to VIVO.</p>
+orcid_step2_already_present = <p>Su registro ORCID ya incluye un vínculo a VIVO.</p>
 
-orcid_step2_denied = <p>You denied VIVO's request to add an External ID to your ORCID record.</p> \
-<p>Linking can't continue.</p>
+orcid_step2_denied = <p>Ha denegado la solicitud de VIVO de añadir un ID externo a su registro ORCID.</p> \
+<p>La vinculación no puede continuar.</p>
 
-orcid_step2_failed = <p>VIVO failed to add an External ID to your ORCID record.</p> \
-<p>Linking can't continue.</p>
+orcid_step2_failed = <p>VIVO no pudo añadir un ID externo a su registro ORCID.</p> \
+<p>La vinculación no puede continuar.</p>
 
-orcid_step2_added = <p>Your ORCID record is linked to VIVO</p>
+orcid_step2_added = <p>Su registro ORCID está conectado a VIVO</p>
 
-orcid_button_step1 = Continue Step 1
-orcid_button_step2 = Continue Step 2
+orcid_button_step1 = Continúe con el paso 1
+orcid_button_step2 = Continúe con el paso 2
 
-orcid_step_completed = (step completed)
-orcid_view_orcid_record = View your ORCID record.
-orcid_return_to_vivo = Return to your VIVO profile page
+orcid_step_completed = (paso completado)
+orcid_view_orcid_record = Vea su registro ORCID.
+orcid_return_to_vivo = Vuelva a la página de su perfil VIVO
 # Messages for creating and linking resources (publications)
-create_and_link_enter=Enter {0}:
-create_and_link_claim_for=Claiming works for<br />{0}
-create_and_link_confirm_works=Confirm your work(s)
-create_and_link_confirm_works_intro=Please check that these are the work(s) that you wish to claim, and indicate your relationship with them.
-create_and_link_authors=Authors
-create_and_link_authors_desc=If you are an author of a work, please select your name in the author list.<br />Retrieved metadata may be incomplete. If you can not see your name listed, select "Unlisted Author".
-create_and_link_editors=Editors
-create_and_link_editors_desc=If you edited the work, please select "Editor".
-create_and_link_not_mine_desc=If you do not wish to claim a work, select "This is not my work".
-create_and_link_already_claimed=You have already claimed this work.
-create_and_link_unlisted_author=Unlisted Author
+create_and_link_enter=Entre {0}:
+create_and_link_claim_for=Reclamando obras para<br />{0}
+create_and_link_confirm_works=Confirme su(s) obra(s)
+create_and_link_confirm_works_intro=Por favor compruebe las obras que desea reclamar e indique su relación con ellas.
+create_and_link_authors=Autores
+create_and_link_authors_desc=Si es el autor de una obra, por favor seleccione su nombre de la lista de autores.<br />Los metadatos extraídos podrían estar incompletos. Si no ve su nombre en la lista, seleccione "Autor no enlistado”
+create_and_link_editors=Editores
+create_and_link_editors_desc=Si ha editado la obra, seleccione "Editor".
+create_and_link_not_mine_desc=Si no desea reclamar una obra, seleccione “Esta no es mi obra"
+create_and_link_already_claimed=Ya ha reclamado esta obra.
+create_and_link_unlisted_author=Autor no enlistado
 create_and_link_editor=Editor
-create_and_link_not_mine=This is not my work
-create_and_link_remaining=There are {0} ids remaining
-create_and_link_thank_you=Thank you
-create_and_link_finished=There are no more works left to claim.<br />You may enter more IDs below, or view your profile.
-create_and_link_go_profile=Go to profile
-create_and_link_enter_dois_intro=You may enter one or more DOIs to match, and can be entered either as an ID or URL:<br /><br />e.g.
-create_and_link_enter_dois_supported=Currently, DOIs issued by Crossref, DataCite and mEDRA are supported.<br />Each DOI should be separated by a comma or new line.
-create_and_link_enter_pmid_intro=You may enter one or more PubMed IDs to match. Each ID should be separated by a comma or new line.
-create_and_link_enter_pmid_supported=Note that metadata will be retrieved from Crossref, if the PubMed ID can be resolved to a DOI.
-create_and_link_unknown_profile=Unknown Profile
-create_and_link_unknown_resource=Unknown Resource Type
-create_and_link_unauthorized_for_profile=You do not have permissions to claim for this user
-create_and_link_submit_ids=Submit IDs
-create_and_link_submit_confirm=Confirm
-create_and_link_error=Unable to retrieve citation details
-create_and_link_type_article=Article
-create_and_link_type_article_journal=Journal Article
-create_and_link_type_book=Book
-create_and_link_type_chapter=Chapter
-create_and_link_type_dataset=Dataset
-create_and_link_type_figure=Image
-create_and_link_type_graphic=Image
-create_and_link_type_legal_case=Legal Case
-create_and_link_type_legislation=Legislation
-create_and_link_type_manuscript=Manuscript
-create_and_link_type_map=Map
-create_and_link_type_musical_score=Musical Score
-create_and_link_type_paper_conference=Conference Paper
-create_and_link_type_patent=Patent
-create_and_link_type_personal_communication=Letter
+create_and_link_not_mine=Esta no es mi obra
+create_and_link_remaining=Aún hay {0} pendientes
+create_and_link_thank_you=Gracias
+create_and_link_finished=No hay mas obras pendientes para reclamar.<br />Puede agregar más IDs abajo o vaya a ver el perfil.
+create_and_link_go_profile=Ir al perfil
+create_and_link_enter_dois_intro=Puede agregar uno o más DOIs para que coincidan, y pueden agregarse como ID o como URL<br /><br />p.ej.
+create_and_link_enter_dois_supported=Actualmente, se soportan los DOIs emitidos por Crossref, DataCite y mEDRA.<br />Los DOIs deben separarse mediante coma o linea nueva.
+create_and_link_enter_pmid_intro=Puede agregar uno o varios IDs de PubMed para que coincidan. Cada ID debe separarse mediante coma o linea nueva.
+create_and_link_enter_pmid_supported=Note que se recuperarán metadatos de Crossref, si el ID de PubMed permite la asignación a un DOI.
+create_and_link_unknown_profile=Perfil desconocido
+create_and_link_unknown_resource=Tipo de recurso desconocido
+create_and_link_unauthorized_for_profile=No tiene permiso para reclamar para este usuario
+create_and_link_submit_ids=Envíe los ID
+create_and_link_submit_confirm=Confirme
+create_and_link_error=Incapaz de recuperar datos de la citación
+create_and_link_type_article=Artículo
+create_and_link_type_article_journal=Artículo de revista
+create_and_link_type_book=Libro
+create_and_link_type_chapter=Capitulo
+create_and_link_type_dataset=Conjunto de datos
+create_and_link_type_figure=Imagen
+create_and_link_type_graphic=Gráfico
+create_and_link_type_legal_case=Caso legal
+create_and_link_type_legislation=Legislación
+create_and_link_type_manuscript=Manuscrito
+create_and_link_type_map=Mapa
+create_and_link_type_musical_score=Partitura musical
+create_and_link_type_paper_conference=Documento de conferencia
+create_and_link_type_patent=Patente
+create_and_link_type_personal_communication=Carta
 create_and_link_type_post_weblog=Blog
-create_and_link_type_report=Report
-create_and_link_type_review=Review
-create_and_link_type_speech=Speech
-create_and_link_type_thesis=Thesis
-create_and_link_type_webpage=Webpage
-claim_publications_by=Claim publications by
+create_and_link_type_report=Informe
+create_and_link_type_review=Revisión
+create_and_link_type_speech=Discurso
+create_and_link_type_thesis=Tesis
+create_and_link_type_webpage=Pagina web
+claim_publications_by=Reclame publicaciones de
 claim_publications_by_doi=DOI
 claim_publications_by_pmid=PubMed ID
 
@@ -950,4 +950,3 @@ claim_publications_by_pmid=PubMed ID
 first_name_empty_msg = Debe ingresar un valor en el campo Nombre.
 last_name_empty_msg = Debe ingresar un valor en el campo Apellido.
 malformed_last_name_msg = El campo de apellido no puede contener una coma. Ingrese el nombre en el campo Nombre.
-
