--- a/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
+++ b/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
@@ -814,134 +814,134 @@ editor_of_entry = editor de entrada para
 #
 #New Entries for i18n purposes
 #
-edit_entry_for_head_role=: Edit this "head of" role
-edit_entry_for_member_role=: Edit this membership
-edit_entry_for_clinical_role=: Edit this clinical activity
-edit_entry_for_attendee_role=: Edit this participation
-edit_entry_for_organizer_role=: Edit this organizer role
-edit_entry_for_editor_role=: Edit this editor role
-edit_entry_for_service_provider_role=: Edit this service provider role
-edit_entry_for_outreach_provider_role=: Edit this outreach provider role
-edit_entry_for_researcher_role=: Edit this researcher role
-edit_entry_for_reviewer_role=: Edit this reviewer role
-edit_entry_for_teacher_role=: Edit this teaching role
+edit_entry_for_head_role=: Edite este papel de "chefe de"
+edit_entry_for_member_role=: Edite esta adesão
+edit_entry_for_clinical_role=: Edite esta atividade clínica
+edit_entry_for_attendee_role=: Edite esta participação
+edit_entry_for_organizer_role=: Edite este papel de organizador
+edit_entry_for_editor_role=: Edite este papel de editor
+edit_entry_for_service_provider_role=: Edite este papel de provedor de serviços
+edit_entry_for_outreach_provider_role=: Edite este papel de provedor de divulgação
+edit_entry_for_researcher_role=: Edite este papel de investigador
+edit_entry_for_reviewer_role=: Edite este papel de revisor
+edit_entry_for_teacher_role=: Edite este papel de ensino
 
-create_entry_for_head_role=: Add a new "head of" role
-create_entry_for_member_role=: Add a new membership
-create_entry_for_clinical_role=: Add a new clinical activity
-create_entry_for_attendee_role=: Add a new participation
-create_entry_for_organizer_role=: Add a new Organizer role
-create_entry_for_editor_role=: Add a new editor role
-create_entry_for_service_provider_role=: Add a new service provider role
-create_entry_for_outreach_provider_role=: Add a new outreach provider role
-create_entry_for_researcher_role=: Add a new researcher role
-create_entry_for_reviewer_role=: Add a new reviewer role
-create_entry_for_teacher_role=: Add a new teaching role
+create_entry_for_head_role=: Adicione um novo papel de "chefe de"
+create_entry_for_member_role=: Adicione um novo adesão
+create_entry_for_clinical_role=: Adicione uma nova atividade clínica
+create_entry_for_attendee_role=: Adicione uma nova participação
+create_entry_for_organizer_role=: Adicione um novo papel de organizador
+create_entry_for_editor_role=: Adicione um novo papel de editor
+create_entry_for_service_provider_role=: Adicione um novo papel de provedor de serviços
+create_entry_for_outreach_provider_role=: Adicione um novo papel de provedor de divulgação
+create_entry_for_researcher_role=: Adicione um novo papel de investigador
+create_entry_for_reviewer_role=: Adicione um novo papel de revisor
+create_entry_for_teacher_role=: Adicione um novo papel de ensino
 
 
-save_changes=Save
-start_capitalized = Start
-end_capitalized = End
-institution_name=Name of Institution
-role_in_institution=Role in Institution
-presentation_name_capitalized=Title of Presentation
-role_in_presentation_capitalized=Role in Presentation
-advisee_capitalized_first_name=First Name
-advisee_capitalized_lastname=Last Name
+save_changes=Guardar
+start_capitalized = Início
+end_capitalized = Fim
+institution_name=Designação da instituição
+role_in_institution=Papel na instituição
+presentation_name_capitalized=Título da apresentação
+role_in_presentation_capitalized=Papel na apresentação
+advisee_capitalized_first_name=Nome próprio
+advisee_capitalized_lastname=Sobrenome
 
-add_orcid_id=Add an iD
+add_orcid_id=Adicione um ID
 
-orcid_title_add = Do you want to add an ORCID iD?
-orcid_step1_add = Step 1: Adding your ORCID iD
-orcid_title_confirm = Do you want to add an ORCID iD?
-orcid_step1_confirm = Step 1: Adding your ORCID iD
+orcid_title_add = Você deseja adicionar um ID de ORCID?
+orcid_step1_add = Passo 1: Adicione seu ID de ORCID
+orcid_title_confirm = Você deseja adicionar um ID de ORCID?
+orcid_step1_confirm = Passo 1: Adicione seu ID de ORCID
 
-orcid_step1_description = <ul><li>VIVO redirects you to ORCID's web site.</li> \
-<li>You log in to your ORCID account. <ul class="inner"><li>If you don't have an account, you can create one.</li></ul></li> \
-<li>You tell ORCID that VIVO may read your ORCID record.</li> \
-<li>VIVO reads your ORCID record.</li> \
-<li>VIVO notes that your ORCID iD is confirmed.</li></ul>
+orcid_step1_description = <ul><li>VIVO redireciona você para o site do ORCID.</li> \
+<li>Você faz login na sua conta ORCID. <ul class="inner"><li>Se você não tem uma conta, pode criar uma.</li></ul></li> \
+<li>Você diz ao ORCID que o VIVO pode ler o seu registro do ORCID.</li> \
+<li>VIVO lê seu registro ORCID.</li> \
+<li>VIVO nota que seu ID de ORCID está confirmado.</li></ul>
 
-orcid_step1_denied = <p>You denied VIVO's request to read your ORCID record.</p> \
-<p>Confirmation can't continue.</p>
+orcid_step1_denied = <p>Você negou a solicitação da VIVO de leitura do seu registro ORCID.</p> \
+<p>A confirmação não pode continuar.</p>
 
-orcid_step1_failed = <p>VIVO failed to read your ORCID record.</p> \
-<p>Confirmation can't continue.</p>
+orcid_step1_failed = <p>VIVO falhou ao ler seu registro ORCID.</p> \
+<p>A confirmação não pode continuar.</p>
 
-orcid_step1_confirmed = <p>Your ORCID iD is confirmed as {0}</p>
+orcid_step1_confirmed = <p>Seu ID de ORCID é confirmado como {0}</p>
 
-orcid_step2_heading = Step 2 (recommended): Linking your ORCID record to VIVO
+orcid_step2_heading = Passo 2 (recomendado): Vinculando seu registro ORCID ao VIVO
 
-orcid_step2_description = <ul><li>VIVO redirects you to ORCID's web site</li> \
-<li>You tell ORCID that VIVO may add an "external ID" to your ORCID record.</li> \
-<li>VIVO adds the external ID.</li></ul>
+orcid_step2_description = <ul><li>VIVO redireciona você para o site do ORCID.</li> \
+<li>Você diz ao ORCID que VIVO pode adicionar um "ID externo" ao seu registro ORCID.</li> \
+<li>VIVO adiciona o ID externo.</li></ul>
 
-orcid_step2_already_present = <p>Your ORCID record already includes a link to VIVO.</p>
+orcid_step2_already_present = <p>Seu registro ORCID já inclui um link para VIVO.</p>
 
-orcid_step2_denied = <p>You denied VIVO's request to add an External ID to your ORCID record.</p> \
-<p>Linking can't continue.</p>
+orcid_step2_denied = <p>Você negou a solicitação da VIVO para adicionar um ID externo ao seu registro ORCID.</p> \
+<p>A vinculação não pode continuar.</p>
 
-orcid_step2_failed = <p>VIVO failed to add an External ID to your ORCID record.</p> \
-<p>Linking can't continue.</p>
+orcid_step2_failed = <p>VIVO falhou ao adicionar um ID externo ao seu registro ORCID.</p> \
+<p>A vinculação não pode continuar.</p>
 
-orcid_step2_added = <p>Your ORCID record is linked to VIVO</p>
+orcid_step2_added = <p>Seu registro ORCID está vinculado ao VIVO</p>
 
-orcid_button_step1 = Continue Step 1
-orcid_button_step2 = Continue Step 2
+orcid_button_step1 = Continue com o passo 1
+orcid_button_step2 = Continue com o passo 2
 
-orcid_step_completed = (step completed)
-orcid_view_orcid_record = View your ORCID record.
-orcid_return_to_vivo = Return to your VIVO profile page
+orcid_step_completed = (passo completado)
+orcid_view_orcid_record = Visualize seu registro ORCID.
+orcid_return_to_vivo = Volte para a página do seu perfil VIVO
 # Messages for creating and linking resources (publications)
-create_and_link_enter=Enter {0}:
-create_and_link_claim_for=Claiming works for<br />{0}
-create_and_link_confirm_works=Confirm your work(s)
-create_and_link_confirm_works_intro=Please check that these are the work(s) that you wish to claim, and indicate your relationship with them.
-create_and_link_authors=Authors
-create_and_link_authors_desc=If you are an author of a work, please select your name in the author list.<br />Retrieved metadata may be incomplete. If you can not see your name listed, select "Unlisted Author".
-create_and_link_editors=Editors
-create_and_link_editors_desc=If you edited the work, please select "Editor".
-create_and_link_not_mine_desc=If you do not wish to claim a work, select "This is not my work".
-create_and_link_already_claimed=You have already claimed this work.
-create_and_link_unlisted_author=Unlisted Author
+create_and_link_enter=Entre {0}:
+create_and_link_claim_for=Reivindicação obras para<br />{0}
+create_and_link_confirm_works=Confirme sua(s) obra(s)
+create_and_link_confirm_works_intro=Verifique se essas são as obras que você deseja reivindicar, e indique seu relacionamento com eles.
+create_and_link_authors=Autores
+create_and_link_authors_desc=Se você é um autor de uma obra, por favor selecione seu nome na lista de autores.<br />Os metadados recuperados podem estar incompletos. Se você não consegue ver seu nome listado, selecione "Autor não cotado".
+create_and_link_editors=Editores
+create_and_link_editors_desc=Se você editou a obra, por favor selecione "Editor".
+create_and_link_not_mine_desc=Se você não deseja reivindicar uma obra, por favor selecione "Esta obra não é minha".
+create_and_link_already_claimed=Você já reivindicou esta obra.
+create_and_link_unlisted_author=Autor não cotado
 create_and_link_editor=Editor
-create_and_link_not_mine=This is not my work
-create_and_link_remaining=There are {0} ids remaining
-create_and_link_thank_you=Thank you
-create_and_link_finished=There are no more works left to claim.<br />You may enter more IDs below, or view your profile.
-create_and_link_go_profile=Go to profile
-create_and_link_enter_dois_intro=You may enter one or more DOIs to match, and can be entered either as an ID or URL:<br /><br />e.g.
-create_and_link_enter_dois_supported=Currently, DOIs issued by Crossref, DataCite and mEDRA are supported.<br />Each DOI should be separated by a comma or new line.
-create_and_link_enter_pmid_intro=You may enter one or more PubMed IDs to match. Each ID should be separated by a comma or new line.
-create_and_link_enter_pmid_supported=Note that metadata will be retrieved from Crossref, if the PubMed ID can be resolved to a DOI.
-create_and_link_unknown_profile=Unknown Profile
-create_and_link_unknown_resource=Unknown Resource Type
-create_and_link_unauthorized_for_profile=You do not have permissions to claim for this user
-create_and_link_submit_ids=Submit IDs
-create_and_link_submit_confirm=Confirm
-create_and_link_error=Unable to retrieve citation details
-create_and_link_type_article=Article
-create_and_link_type_article_journal=Journal Article
-create_and_link_type_book=Book
-create_and_link_type_chapter=Chapter
-create_and_link_type_dataset=Dataset
-create_and_link_type_figure=Image
-create_and_link_type_graphic=Image
-create_and_link_type_legal_case=Legal Case
-create_and_link_type_legislation=Legislation
-create_and_link_type_manuscript=Manuscript
-create_and_link_type_map=Map
-create_and_link_type_musical_score=Musical Score
-create_and_link_type_paper_conference=Conference Paper
-create_and_link_type_patent=Patent
-create_and_link_type_personal_communication=Letter
+create_and_link_not_mine=Esta obra não é minha
+create_and_link_remaining=Há {0} IDs restantes
+create_and_link_thank_you=Obrigado
+create_and_link_finished=Não há mais obras para reivindicar.<br />Você pode inserir mais IDs abaixo ou ir para o seu perfil.
+create_and_link_go_profile=Vá para seu perfil
+create_and_link_enter_dois_intro=Você pode inserir um ou mais DOIs para corresponder, e pode ser inserido como um ID ou URL:<br /><br />p.ex.
+create_and_link_enter_dois_supported=Atualmente, DOIs emitidos por Crossref, DataCite e mEDRA são suportados.<br />Cada DOI deve ser separado por uma vírgula ou nova linha.
+create_and_link_enter_pmid_intro=Você pode inserir um ou mais IDs PubMed para corresponder. Cada ID deve ser separado por uma vírgula ou nova linha.
+create_and_link_enter_pmid_supported=Note que os metadados serão recuperados do Crossref, se o ID PubMed puder ser resolvido para um DOI.
+create_and_link_unknown_profile=Perfil desconhecido
+create_and_link_unknown_resource=Tipo de recurso desconhecido
+create_and_link_unauthorized_for_profile=Você não tem permissão para reivindicar para este usuário
+create_and_link_submit_ids=Envie os IDs
+create_and_link_submit_confirm=Confirme
+create_and_link_error=Incapaz de recuperar os detalhes da citação
+create_and_link_type_article=Artigo
+create_and_link_type_article_journal=Artigo de revista
+create_and_link_type_book=Livro
+create_and_link_type_chapter=Capítulo
+create_and_link_type_dataset=Conjunto de dados
+create_and_link_type_figure=Imagem
+create_and_link_type_graphic=Gráfico
+create_and_link_type_legal_case=Processo judicial
+create_and_link_type_legislation=Legislação
+create_and_link_type_manuscript=Manuscrito
+create_and_link_type_map=Mapa
+create_and_link_type_musical_score=Partitura musical
+create_and_link_type_paper_conference=Comunicação
+create_and_link_type_patent=Patente
+create_and_link_type_personal_communication=Carta
 create_and_link_type_post_weblog=Blog
-create_and_link_type_report=Report
-create_and_link_type_review=Review
-create_and_link_type_speech=Speech
-create_and_link_type_thesis=Thesis
-create_and_link_type_webpage=Webpage
-claim_publications_by=Claim publications by
+create_and_link_type_report=Relatório
+create_and_link_type_review=Revista
+create_and_link_type_speech=Discurso
+create_and_link_type_thesis=Tese
+create_and_link_type_webpage=Página web
+claim_publications_by=Reivindique publicações de
 claim_publications_by_doi=DOI
 claim_publications_by_pmid=PubMed ID
 
@@ -949,4 +949,3 @@ claim_publications_by_pmid=PubMed ID
 first_name_empty_msg = Você deve inserir um valor no campo Nome.
 last_name_empty_msg = Você deve inserir um valor no campo Sobrenome.
 malformed_last_name_msg = O campo de sobrenome não pode conter vírgulas. Por favor, insira o primeiro nome no campo Nome.
-
