removed translation mistake

--- a/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -424,8 +424,8 @@ enter_postal_code = Bitte im Feld Postleitzahl einen Wert eintragen.
 country = Land
 street_address = Straße
 city_locality = Stadt/ Ort
-region = State/Province/Region
-postal_code = Land/ Bundesland/ Bezirk
+region = Land/Bundesland/Bezirk
+postal_code = Postleitzahl
 
 posn_entry_for = Eintrag der Position
 
