--- a/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -341,7 +341,7 @@ create_new_class = eine neue Klasse erstellen
 create_new_one = neu erstellen
 use_capitals_each_word = jedes Wort mit einem Großbuchstaben beginnen
 local_namespace = lokaler Namensraum
-problematic_section_error = Fehler: ein probelmatischer Abschnitt wie oben sollte bereits verarbeitet sein.
+problematic_section_error = Fehler: ein problematischer Abschnitt wie oben sollte bereits verarbeitet sein.
 new_local_ontology = neue lokale Ontologie
 
 manage_grants_and_projects = Forschungsprojekte & Projekte verwalten für
