Sortable using keyboard - Added correct title for manage webpages, authors,editos...

--- a/webapp/src/main/webapp/themes/nemo/i18n/vivo_all_en_US.properties
+++ b/webapp/src/main/webapp/themes/nemo/i18n/vivo_all_en_US.properties
@@ -452,6 +452,8 @@ check_pubs_to_exclude = Check those publications you want to <em>exclude</em> fr
 
 manage_web_pages = Manage Web Pages
 has_no_webpages = This individual currently has no web pages specified. Add a new web page by clicking on the button below.
+arrow_key_reorder_note = Use Arrow keys to navigate, and Shift + Arrow keys to move items up or down.
+reorder_action_info = {0} moved to position {1}.
 edit_webpage_link = edit web page link
 delete_webpage_link = delete web page link
 webpage_url = webpage url
